fixed layout issues in preparation to importing

--- a/_sass/kat/_base.scss
+++ b/_sass/kat/_base.scss
@@ -22,6 +22,9 @@ body {
   margin-right: 2vw;
   overflow: hidden;
   display: table;
+  @media screen and (max-width: #{$medium}) {
+    display: inherit;
+  }
 }
 
 .content {
@@ -35,14 +38,21 @@ body {
   float: left;
 }
 
+.latest_post {
+  background: $background_1;
+  border: 2px solid $border_color;
+  border-radius: $border-radius;
+}
+
 .category_structure {
   display: grid;
   margin: auto 0.25em;
   @media screen and (min-width: #{$medium}) {
     grid-template-columns: 1fr 1fr 1fr;
     display: grid;
+    padding: 2em 0;
   }
-  background-color: $foreground_5;
+  // background-color: $foreground_5;
   color: $background;
   border: 2px;
   border-color: $border_color;
@@ -60,6 +70,13 @@ body {
     }
   }
 }
+
+.initial_content {
+  top: 2em;
+  position: relative;
+  padding-bottom: 2em;
+}
+
 .category_title {
   font-size: $h4-font-size;
 }
@@ -76,6 +93,8 @@ body {
   background-color: $foreground_5;
   font-size: $h1-font-size;
   padding: 0.5em;
+  border: 4px solid $foreground_5;
+  border-radius: 4px;
 }
 
 p {
@@ -110,4 +129,15 @@ a {
     color: $green_bright;
     outline: 0;
   }
+}
+
+p > img {
+  max-width: 50%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  float: right;
+  border: 2px solid $border_color;
+  border-radius: $border-radius;
+  box-shadow: 4px 4px 4px $background;
 }
